Required changes were completed except renaming variables as I am unsure which names and why I should use