@@ -1,9 +1,7 @@
 package practice;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import model.Candidate;
@@ -21,10 +19,9 @@ public class StreamPractice {
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
                 .map(n -> n.split(","))
-                .flatMap(Stream::of)
-                .map(Integer::parseInt)
+                .flatMap(Stream::of).map(Integer::parseInt)
                 .filter(n -> n % 2 == 0)
-                .min(Comparator.naturalOrder())
+                .min(Integer::compareTo)
                 .orElseThrow(() -> new RuntimeException(
                         "Can't get min value from list: <" + numbers + ">"));
     }
@@ -61,7 +58,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getSex() == Person.Sex.MAN
                 && p.getAge() >= fromAge && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -81,7 +78,7 @@ public class StreamPractice {
                         && e.getAge() >= fromAge && e.getAge() <= femaleToAge)
                         || (e.getSex()) == Person.Sex.MAN
                         && e.getAge() >= fromAge && e.getAge() <= maleToAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -94,7 +91,7 @@ public class StreamPractice {
                 .filter(p -> p.getSex() == Person.Sex.WOMAN && p.getAge() >= femaleAge)
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -112,9 +109,9 @@ public class StreamPractice {
     public List<String> validateCandidates(List<Candidate> candidates) {
         CandidateValidator candidateValidator = new CandidateValidator();
         return candidates.stream()
-                .filter(candidateValidator::test)
+                .filter(candidateValidator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
